<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">\
    <group
        android:id="@+id/nav_group_custom_labels"
        android:checkableBehavior="single" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_starred"
            android:title="@string/starred" />
        <item
            android:id="@+id/nav_important"
            android:icon="@drawable/ic_important"
            android:title="@string/important" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_sent"
            android:title="@string/sent" />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_drafts"
            android:title="@string/drafts" />
        <item
            android:id="@+id/nav_all_mail"
            android:icon="@drawable/ic_all_mail"
            android:title="@string/all_mail" />
        <item
            android:id="@+id/nav_spam"
            android:icon="@drawable/ic_spam"
            android:title="@string/spam" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/trash" />

        <item
            android:id="@+id/nav_create_label"
            android:icon="@drawable/ic_label"
            android:title="@string/create_a_label" />

        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_theme"
            android:title="@string/change_theme" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

    </group>
</menu>
