<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/signup_tvTitle"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="24dp" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_et_firstName"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_et_last_name"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp"
                android:padding="12dp" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:entries="@array/gender_options"
                android:prompt="@string/gender_prompt"
                android:layout_marginBottom="16dp"
                android:padding="12dp"
                 />

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date_mm_dd_yyyy"
                android:layout_marginBottom="16dp"
                android:padding="12dp"
                android:inputType="date"
                />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_et_username"
                android:layout_marginBottom="16dp"
                android:padding="12dp"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_et_password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#CCCCCC"
                android:textSize="20sp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/profileInitial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/profile_circle_blue"
                    android:text="" />

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />
            </FrameLayout>


            <Button
                android:id="@+id/btnSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp" />


            <!-- Register Button -->
            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                android:layout_marginBottom="16dp"
                android:padding="12dp"
                 />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnBackToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_login"
                android:backgroundTint="@android:color/darker_gray"
                android:padding="12dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
